•count機能を追加 •Makefileのgenを修正
